# mud_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  db_dump.sql  docker-compose.yml  pyproject.toml  requirements.txt  single.py
.github/workflows/: Build.yml  Deploy.yml  docker-image.yml
tgbot/: config.py
tgbot/clients/: postgres_client.py  redis_client.py
tgbot/engines/: engines.py
tgbot/handlers/: echo.py  user.py
tgbot/misc/: metaclasses.py
tgbot/world/: scene.py  test_scenes.py
